# bot-telegram-daemon

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
configs/: example.yaml  production.yaml
deployment/: start.sh  stop.sh
src/: bot_state.py  card_renderer.py  config.py  formatter.py  logging_utils.py  models.py  monitor.py  telegram_bot.py  validator.py  ws_client.py
tests/: conftest.py  test_card_renderer.py  test_config.py  test_formatter.py  test_models.py  test_monitor.py
